<resources>
    <string name="app_name">Budget</string>

    <!-- Strings related to login -->
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in">Zaluguj się</string>
    <string name="error_invalid_credentials">Nieprawidłowe dane logowania</string>
    <string name="error_field_required">Pole nie może być puste</string>
    <string name="error_field_unique">Źródło o takiej nazwie już istnieje</string>

    <!-- Strings related to main activity -->
    <string name="action_manage_category">Zarządzaj źródłami</string>
    <string name="title_activity_main">Budżet</string>
    <string name="logout">Wyloguj</string>
    <string name="show_expenses">Pokazuj wydatki</string>
    <string name="show_income">Pokazuj dochody</string>
    <string name="graphs">Pokaż zestawienia</string>
    <string name="welcom">Witaj, </string>
    <string name="not_the_owner">Nie możesz modyfikować pozycji dodanych przez innego użytkownika</string>

    <!-- Strings related to category activity -->
    <string name="action_add_category">Dodaj źródło</string>
    <string name="title_activity_category">Zarządzanie źródłami</string>

    <!-- Strings related to catagories -->
    <string name="title_activity_manage_category">Źródło</string>
    <string name="label_name">Nazwa</string>
    <string name="label_comment">Komentarz (opcjonalne)</string>
    <string name="label_value">Domyślna wartość w PLN (opcjonalne)</string>
    <string name="label_type">Domyślny typ (opcjonalnie)</string>
    <string name="desc_value">Wartość:</string>
    <string name="desc_type">Typ:</string>
    <string name="desc_comment">Komentarz:</string>
    <string name="desc_date">Data:</string>
    <string name="desc_category">Źródło:</string>
    <string name="pln"> PLN</string>
    <string name="button_create">Utwórz</string>
    <string name="button_modify">Modyfikuj</string>
    <string name="button_delete">Usuń</string>
    <string name="expense">Wydatek</string>
    <string name="income">Dochód</string>
    <string name="none">Brak</string>
    <string-array name="type_array">
        <item></item>
        <item>@string/income</item>
        <item>@string/expense</item>
    </string-array>
    <string-array name="type_array_no_null">
        <item>@string/income</item>
        <item>@string/expense</item>
    </string-array>

    <!-- Strings related to entries-->
    <string name="title_activity_manage_entry">Pozycja</string>
    <string name="entry_label_comment">Komentarz (opcjonalne)</string>
    <string name="entry_label_value">Wartość</string>
    <string name="entry_label_type">Typ</string>
    <string name="entry_label_date">Data</string>
    <string name="entry_label_category">Źródło</string>
    <string name="add_entry">Dodaj pozycję</string>
    <string name="type_required">Musisz wybrać typ: przychód/wydatek</string>
    <string name="category_required">Musisz wybrać źródło</string>
    <string name="error_cannot_parse">Wartość nie jest liczbą lub zbyt duża (zakres do 2147483647)</string>
    <string name="error_wrong_value">Wartość musi być większa od 0</string>
    <string name="error_wrong_date">Wymagany format daty:</string>

    <!-- Strings related to entries-->
    <string name="title_activity_graph_monthly">Miesięczy bilans</string>
    <string name="content_graph_year_selection_label">Wybierz rok</string>
    <string name="content_graph_type_selection_label">Wybierz typ</string>
    <string name="title_activity_graph_share">Udział źródeł w bilansie</string>

</resources>