<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pl.itmation.budget.MainActivity">
    <item
        android:id="@+id/manage_category"
        android:orderInCategory="100"
        android:title="@string/action_manage_category"
        app:showAsAction="never" />
    <item
        android:id="@+id/add_entry"
        android:orderInCategory="100"
        android:title="@string/add_entry"
        app:showAsAction="never" />
    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/show_income"
        android:orderInCategory="100"
        android:title="@string/show_income"
        android:checkable="true"
        android:checked="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/show_expenses"
        android:orderInCategory="100"
        android:title="@string/show_expenses"
        android:checkable="true"
        android:checked="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/graphs"
        android:orderInCategory="100"
        android:title="@string/graphs"
        app:showAsAction="never" />
</menu>
